--- a/index.html
+++ b/index.html
@@ -2,168 +2,137 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Care Mobility | Recurring Medical Transportation, Done Right</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Care Mobility – Recurring Medical Transportation</title>
+  <meta name="description"
+        content="Care Mobility provides reliable recurring medical transportation for dialysis, chemotherapy, physical therapy, and other ongoing appointments." />
 
-  <!-- Favicon -->
-  <link rel="icon" href="assets/cm-favicon.png" type="image/png" />
-  <link rel="apple-touch-icon" href="assets/cm-favicon.png" />
-
+  <link rel="icon" href="assets/cm-favicon.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="header-inner">
-      <div class="brand">
-        <img src="assets/cm-favicon.png" alt="Care Mobility logo" />
-        <div class="brand-text">
-          <strong>Care Mobility</strong>
-          <span>Getting you there every day</span>
-        </div>
-      </div>
-      <div class="header-contact">
-        <a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a>
-      </div>
-    </div>
-  </header>
+<!-- ================= HEADER / HERO ================= -->
+<header class="hero">
+  <div class="hero-content">
+    <h1>Care Mobility</h1>
+    <h2>Recurring Medical Transportation, Done Right.</h2>
 
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-copy">
-      <h1>
-        Reliable transportation<br />
-        for recurring medical care
-      </h1>
-      <p class="hero-subtitle">
-        Consistent, dependable rides for seniors and patients with ongoing
-        medical appointments.
-      </p>
-    </div>
-
-    <div class="hero-image">
-      <img
-        src="assets/pleasant-ride.jpg"
-        alt="Driver providing a calm, friendly ride to a senior patient"
-      />
-    </div>
-  </section>
-
-  <!-- SERVICES -->
-  <section class="services">
-    <div class="services-header">
-      <h2>Recurring Medical Transportation, Done Right</h2>
-
-      <p class="services-intro">
-        Care Mobility supports a wide range of recurring medical appointments.
-        From dialysis and cancer treatments to rehabilitation, radiation therapy,
-        and post-operative care, we’re built for patients who need the same ride,
-        on the same schedule — week after week.
-      </p>
-    </div>
-
-    <div class="service-cards">
-      <div class="service-card blue">
-        <div class="card-icon">🩺</div>
-        <h3>Dialysis</h3>
-        <p>
-          Multiple weekly treatments where punctual, predictable pickup times
-          are critical.
-        </p>
-      </div>
-
-      <div class="service-card peach">
-        <div class="card-icon">💉</div>
-        <h3>Cancer & Infusion Therapy</h3>
-        <p>
-          Ongoing treatments at the same care centers over extended periods.
-        </p>
-      </div>
-
-      <div class="service-card green">
-        <div class="card-icon">♿</div>
-        <h3>Rehabilitation & Therapy</h3>
-        <p>
-          Physical, occupational, speech, and pulmonary therapy requiring
-          repeat visits.
-        </p>
-      </div>
-
-      <div class="service-card blue">
-        <div class="card-icon">☢️</div>
-        <h3>Radiation Therapy</h3>
-        <p>
-          Daily visits over multiple weeks with tightly scheduled treatment windows.
-        </p>
-      </div>
-
-      <div class="service-card peach">
-        <div class="card-icon">🤝</div>
-        <h3>Substance Use Treatment</h3>
-        <p>
-          Outpatient programs dependent on consistent attendance and routine.
-        </p>
-      </div>
-
-      <div class="service-card green">
-        <div class="card-icon">🏥</div>
-        <h3>Post-Op Rehab</h3>
-        <p>
-          Recovery appointments while mobility is limited.
-        </p>
-      </div>
-    </div>
-
-    <div class="services-image">
-      <img
-        src="assets/senior-assist.jpg"
-        alt="Senior receiving assistance entering a vehicle"
-      />
-    </div>
-  </section>
-
-  <!-- FOUNDER -->
-  <section class="founder-section">
-    <div class="founder-inner">
-      <div class="founder-photo-wrap">
-        <img
-          src="assets/daniel.jpg"
-          alt="Founder of Care Mobility"
-          class="founder-photo"
-        />
-      </div>
-
-      <div class="founder-content">
-        <h2>Built Around Showing Up</h2>
-
-        <p class="founder-lead">
-          Care Mobility exists because many seniors weren’t struggling
-          with a single ride — they were struggling with the same ride,
-          over and over again.
-        </p>
-
-        <p>
-          Dialysis, therapy, oncology, and rehabilitation appointments
-          happen multiple times a week, often at the same clinic, on the
-          same schedule. Care Mobility is built specifically for these
-          recurring trips — with familiar drivers, predictable pickup
-          times, and dependable routines.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <img src="assets/cm-favicon.png" alt="Care Mobility logo" />
-    <p>
-      Questions or referrals?
-      <a href="mailto:caremobility247@gmail.com">
-        caremobility247@gmail.com
-      </a>
+    <p class="hero-subtext">
+      Dependable, familiar, on-time transportation for dialysis, chemotherapy,
+      physical therapy, radiation treatment, and other recurring medical visits.
     </p>
-  </footer>
+  </div>
+
+  <div class="hero-image">
+    <img src="assets/hero-senior-ride.jpg" alt="Senior receiving medical transportation assistance">
+  </div>
+</header>
+
+<!-- ================= APPOINTMENT TYPES ================= -->
+<section class="appointment-types">
+  <h3>We Support Appointments Like:</h3>
+  <ul>
+    <li>Dialysis (multiple times per week)</li>
+    <li>Chemotherapy & radiation therapy</li>
+    <li>Physical therapy & rehabilitation</li>
+    <li>Specialist follow-ups & imaging visits</li>
+    <li>Any recurring medical appointment requiring reliability</li>
+  </ul>
+</section>
+
+<!-- ================= COMPARISON TABLE ================= -->
+<section class="comparison">
+  <h3>Why Care Mobility Is Different</h3>
+
+  <div class="table-wrapper">
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Rideshare</th>
+          <th>Traditional Medical Transport</th>
+          <th>Care Mobility</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Same Driver Each Time</td>
+          <td>❌</td>
+          <td>⚠️</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td>On-Time for Recurring Appointments</td>
+          <td>❌</td>
+          <td>⚠️</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td>Personal Assistance</td>
+          <td>❌</td>
+          <td>⚠️</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td>Private-Pay Flexibility</td>
+          <td>⚠️</td>
+          <td>❌</td>
+          <td>✅</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
+<!-- ================= BIO SECTION ================= -->
+<section class="bio">
+  <img src="assets/driver-photo.jpg" alt="Care Mobility driver">
+  <p>
+    I personally provide each ride so patients see a familiar face every visit.
+    No rotating drivers, no uncertainty, no missed appointments.
+  </p>
+</section>
+
+<!-- ================= CONTACT / FORM ================= -->
+<section class="contact">
+  <h3>Request Information or Availability</h3>
+
+  <form name="caremobility-contact" method="POST" netlify>
+    <input type="hidden" name="form-name" value="caremobility-contact" />
+
+    <label>
+      Name
+      <input type="text" name="name" required>
+    </label>
+
+    <label>
+      Email
+      <input type="email" name="email" required>
+    </label>
+
+    <label>
+      Message
+      <textarea name="message" rows="4"></textarea>
+    </label>
+
+    <button type="submit">Submit</button>
+  </form>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <div class="footer-brand">
+    <img src="assets/cm-favicon.png" alt="Care Mobility logo">
+    <span>Care Mobility</span>
+  </div>
+
+  <p>
+    Contact: <a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a>
+  </p>
+</footer>
 
 </body>
 </html>
