--- a/index.html
+++ b/index.html
@@ -2,136 +2,200 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Care Mobility | Recurring Medical Transportation, Done Right</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-        content="Care Mobility provides reliable recurring medical transportation for dialysis, chemotherapy, physical therapy, and other ongoing appointments." />
-
-  <link rel="icon" href="assets/cm-favicon.png" />
+  <title>Care Mobility – Reliable Medical Transportation</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="assets/cm-favicon.png" />
 </head>
 
 <body>
 
-<!-- ================= HEADER / HERO ================= -->
-<header class="hero">
-  <div class="hero-content">
-    <h1>Care Mobility</h1>
-    <h2>Recurring Medical Transportation, Done Right.</h2>
+<!-- HEADER -->
+<header class="site-header">
+  <div class="brand">
+    <img src="assets/cm-favicon.png" class="logo" alt="Care Mobility logo">
+    <div>
+      <div class="brand-name">Care Mobility</div>
+      <div class="brand-tagline">Getting you there every day</div>
+    </div>
+  </div>
+  <div class="header-email">caremobility247@gmail.com</div>
+</header>
 
-    <p class="hero-subtext">
-      Dependable, familiar, on-time transportation for dialysis, chemotherapy,
-      physical therapy, radiation treatment, and other recurring medical visits.
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-text">
+    <h1>Reliable transportation<br>for recurring medical care</h1>
+    <p>
+      Consistent, dependable rides for seniors and patients with
+      ongoing medical appointments.
     </p>
   </div>
 
   <div class="hero-image">
-    <img src="assets/hero-senior-ride.jpg" alt="Senior receiving medical transportation assistance">
+    <img src="assets/hero-senior-ride.jpg" alt="Senior riding with driver">
   </div>
-</header>
-
-<!-- ================= APPOINTMENT TYPES ================= -->
-<section class="appointment-types">
-  <h3>We Support Appointments Like:</h3>
-  <ul>
-    <li>Dialysis (multiple times per week)</li>
-    <li>Chemotherapy & radiation therapy</li>
-    <li>Physical therapy & rehabilitation</li>
-    <li>Specialist follow-ups & imaging visits</li>
-    <li>Any recurring medical appointment requiring reliability</li>
-  </ul>
 </section>
 
-<!-- ================= COMPARISON TABLE ================= -->
+<!-- SERVICES -->
+<section class="services">
+  <h2>Recurring Medical Transportation, Done Right</h2>
+
+  <div class="service-grid">
+    <div class="service-card">
+      <h3>Dialysis</h3>
+      <p>Multiple weekly treatments where timing matters.</p>
+    </div>
+    <div class="service-card">
+      <h3>Cancer & Infusion Therapy</h3>
+      <p>Long-term care at the same treatment centers.</p>
+    </div>
+    <div class="service-card">
+      <h3>Rehabilitation & Therapy</h3>
+      <p>Repeat visits week after week.</p>
+    </div>
+    <div class="service-card">
+      <h3>Radiation Therapy</h3>
+      <p>Daily treatments where delays disrupt care.</p>
+    </div>
+    <div class="service-card">
+      <h3>Substance Use Treatment</h3>
+      <p>Outpatient programs dependent on routine.</p>
+    </div>
+    <div class="service-card">
+      <h3>Post-Op Rehab</h3>
+      <p>Recovery visits to the same facility.</p>
+    </div>
+  </div>
+</section>
+
+<!-- IMAGE BREAK -->
+<section class="image-break">
+  <img src="assets/senior-assist.jpg" alt="Helping senior into car">
+</section>
+
+<!-- WHY IT MATTERS -->
+<section class="why">
+  <div class="why-text">
+    <h2>Why Reliable,<br>Recurring Transportation Matters</h2>
+    <p>
+      Many seniors don’t need transportation once. They need it multiple
+      times each week, often on a fixed schedule.
+    </p>
+    <p>
+      Missed or delayed rides can lead to skipped treatments, increased
+      stress, and unnecessary burden on families and caregivers.
+    </p>
+    <p>
+      Care Mobility provides a simple, fixed-price option without insurance
+      delays, approvals, or administrative complexity.
+    </p>
+  </div>
+
+  <div class="why-cards">
+    <div class="why-card">
+      <strong>Rideshare is unpredictable</strong>
+      <p>Pricing fluctuates, drivers change daily, and availability isn’t guaranteed.</p>
+    </div>
+    <div class="why-card">
+      <strong>Traditional medical transport is bureaucratic</strong>
+      <p>Paperwork, insurance approvals, and long scheduling windows are common.</p>
+    </div>
+    <div class="why-card highlight">
+      <strong>Care Mobility is patient-first</strong>
+      <p>Same routines, familiar drivers, and dependable pickup times.</p>
+    </div>
+  </div>
+</section>
+
+<!-- COMPARISON TABLE -->
 <section class="comparison">
-  <h3>Why Care Mobility Is Different</h3>
+  <h2>How Care Mobility Compares</h2>
 
-  <div class="table-wrapper">
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Rideshare</th>
-          <th>Traditional Medical Transport</th>
-          <th>Care Mobility</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Same Driver Each Time</td>
-          <td>❌</td>
-          <td>⚠️</td>
-          <td>✅</td>
-        </tr>
-        <tr>
-          <td>On-Time for Recurring Appointments</td>
-          <td>❌</td>
-          <td>⚠️</td>
-          <td>✅</td>
-        </tr>
-        <tr>
-          <td>Personal Assistance</td>
-          <td>❌</td>
-          <td>⚠️</td>
-          <td>✅</td>
-        </tr>
-        <tr>
-          <td>Private-Pay Flexibility</td>
-          <td>⚠️</td>
-          <td>❌</td>
-          <td>✅</td>
-        </tr>
-      </tbody>
-    </table>
+  <table>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Care Mobility</th>
+        <th>Rideshare</th>
+        <th>Traditional Medical Transport</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Built for recurring medical care</td>
+        <td>✓</td>
+        <td>✕</td>
+        <td>✕</td>
+      </tr>
+      <tr>
+        <td>Predictable, fixed pricing</td>
+        <td>✓</td>
+        <td>Surge pricing</td>
+        <td>✕</td>
+      </tr>
+      <tr>
+        <td>Minimal paperwork</td>
+        <td>✓</td>
+        <td>✓</td>
+        <td>Insurance approvals</td>
+      </tr>
+      <tr>
+        <td>Same driver & routine</td>
+        <td>✓</td>
+        <td>✕</td>
+        <td>✕</td>
+      </tr>
+      <tr>
+        <td>Patient-first experience</td>
+        <td>✓</td>
+        <td>✕</td>
+        <td>✕</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+<!-- STORY -->
+<section class="story">
+  <img src="assets/daniel.jpg" class="story-photo" alt="Founder">
+  <div>
+    <h2>Built Around Showing Up</h2>
+    <p>
+      Care Mobility was created because many seniors weren’t struggling
+      with a single ride — they were struggling with the same ride,
+      over and over again.
+    </p>
+    <p>
+      Dialysis, therapy, oncology, and rehabilitation require consistency.
+      Familiar drivers and predictable routines reduce stress and help
+      patients focus on their health.
+    </p>
   </div>
 </section>
 
-<!-- ================= BIO SECTION ================= -->
-<section class="bio">
-  <img src="assets/driver-photo.jpg" alt="Care Mobility driver">
-  <p>
-    I personally provide each ride so patients see a familiar face every visit.
-    No rotating drivers, no uncertainty, no missed appointments.
-  </p>
-</section>
+<!-- FORM -->
+<section class="signup">
+  <h2>Request Transportation or Learn More</h2>
 
-<!-- ================= CONTACT / FORM ================= -->
-<section class="contact">
-  <h3>Request Information or Availability</h3>
+  <form name="care-mobility" method="POST" netlify>
+    <input type="hidden" name="form-name" value="care-mobility">
 
-  <form name="caremobility-contact" method="POST" netlify>
-    <input type="hidden" name="form-name" value="caremobility-contact" />
-
-    <label>
-      Name
-      <input type="text" name="name" required>
-    </label>
-
-    <label>
-      Email
-      <input type="email" name="email" required>
-    </label>
-
-    <label>
-      Message
-      <textarea name="message" rows="4"></textarea>
-    </label>
+    <input type="text" name="name" placeholder="Your name" required>
+    <input type="email" name="email" placeholder="Email address" required>
+    <textarea name="notes" placeholder="Tell us about the transportation needs"></textarea>
 
     <button type="submit">Submit</button>
+    <p class="form-note">
+      Please do not include medical diagnoses or protected health information (PHI).
+    </p>
   </form>
 </section>
 
-<!-- ================= FOOTER ================= -->
-<footer>
-  <div class="footer-brand">
-    <img src="assets/cm-favicon.png" alt="Care Mobility logo">
-    <span>Care Mobility</span>
-  </div>
-
-  <p>
-    Contact: <a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a>
-  </p>
+<!-- FOOTER -->
+<footer class="footer">
+  <div>Care Mobility</div>
+  <div>caremobility247@gmail.com</div>
 </footer>
 
 </body>
