--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Care Mobility – Reliable Medical Transportation</title>
+  <title>Care Mobility</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="assets/cm-favicon.png" />
 </head>
@@ -11,20 +11,20 @@
 <body>
 
 <!-- HEADER -->
-<header class="site-header">
-  <div class="brand">
-    <img src="assets/cm-favicon.png" class="logo" alt="Care Mobility logo">
+<header class="header">
+  <div class="header-left">
+    <img src="assets/cm-favicon.png" class="logo" alt="Care Mobility logo" />
     <div>
-      <div class="brand-name">Care Mobility</div>
-      <div class="brand-tagline">Getting you there every day</div>
+      <div class="brand">Care Mobility</div>
+      <div class="tagline">Getting you there every day</div>
     </div>
   </div>
-  <div class="header-email">caremobility247@gmail.com</div>
+  <div class="header-right">caremobility247@gmail.com</div>
 </header>
 
 <!-- HERO -->
 <section class="hero">
-  <div class="hero-text">
+  <div class="hero-copy">
     <h1>Reliable transportation<br>for recurring medical care</h1>
     <p>
       Consistent, dependable rides for seniors and patients with
@@ -33,7 +33,10 @@
   </div>
 
   <div class="hero-image">
-    <img src="assets/hero-senior-ride.jpg" alt="Senior riding with driver">
+    <img
+      src="assets/pleasant-ride-conversation.jpg"
+      alt="Driver providing a calm, friendly ride to a senior"
+    />
   </div>
 </section>
 
@@ -43,27 +46,27 @@
 
   <div class="service-grid">
     <div class="service-card">
-      <h3>Dialysis</h3>
+      <strong>Dialysis</strong>
       <p>Multiple weekly treatments where timing matters.</p>
     </div>
     <div class="service-card">
-      <h3>Cancer & Infusion Therapy</h3>
+      <strong>Cancer & Infusion Therapy</strong>
       <p>Long-term care at the same treatment centers.</p>
     </div>
     <div class="service-card">
-      <h3>Rehabilitation & Therapy</h3>
+      <strong>Rehabilitation & Therapy</strong>
       <p>Repeat visits week after week.</p>
     </div>
     <div class="service-card">
-      <h3>Radiation Therapy</h3>
+      <strong>Radiation Therapy</strong>
       <p>Daily treatments where delays disrupt care.</p>
     </div>
     <div class="service-card">
-      <h3>Substance Use Treatment</h3>
+      <strong>Substance Use Treatment</strong>
       <p>Outpatient programs dependent on routine.</p>
     </div>
     <div class="service-card">
-      <h3>Post-Op Rehab</h3>
+      <strong>Post-Op Rehab</strong>
       <p>Recovery visits to the same facility.</p>
     </div>
   </div>
@@ -71,12 +74,12 @@
 
 <!-- IMAGE BREAK -->
 <section class="image-break">
-  <img src="assets/senior-assist.jpg" alt="Helping senior into car">
+  <img src="assets/senior-assist.jpg" alt="Helping a senior into a car" />
 </section>
 
-<!-- WHY IT MATTERS -->
+<!-- WHY -->
 <section class="why">
-  <div class="why-text">
+  <div class="why-left">
     <h2>Why Reliable,<br>Recurring Transportation Matters</h2>
     <p>
       Many seniors don’t need transportation once. They need it multiple
@@ -92,7 +95,7 @@
     </p>
   </div>
 
-  <div class="why-cards">
+  <div class="why-right">
     <div class="why-card">
       <strong>Rideshare is unpredictable</strong>
       <p>Pricing fluctuates, drivers change daily, and availability isn’t guaranteed.</p>
@@ -108,8 +111,8 @@
   </div>
 </section>
 
-<!-- COMPARISON TABLE -->
-<section class="comparison">
+<!-- COMPARISON -->
+<section class="compare">
   <h2>How Care Mobility Compares</h2>
 
   <table>
@@ -158,7 +161,7 @@
 
 <!-- STORY -->
 <section class="story">
-  <img src="assets/daniel.jpg" class="story-photo" alt="Founder">
+  <img src="assets/daniel.jpg" class="avatar" alt="Founder" />
   <div>
     <h2>Built Around Showing Up</h2>
     <p>
@@ -167,7 +170,6 @@
       over and over again.
     </p>
     <p>
-      Dialysis, therapy, oncology, and rehabilitation require consistency.
       Familiar drivers and predictable routines reduce stress and help
       patients focus on their health.
     </p>
@@ -175,18 +177,18 @@
 </section>
 
 <!-- FORM -->
-<section class="signup">
+<section class="form">
   <h2>Request Transportation or Learn More</h2>
 
   <form name="care-mobility" method="POST" netlify>
-    <input type="hidden" name="form-name" value="care-mobility">
+    <input type="hidden" name="form-name" value="care-mobility" />
 
-    <input type="text" name="name" placeholder="Your name" required>
-    <input type="email" name="email" placeholder="Email address" required>
+    <input type="text" name="name" placeholder="Your name" required />
+    <input type="email" name="email" placeholder="Email address" required />
     <textarea name="notes" placeholder="Tell us about the transportation needs"></textarea>
 
     <button type="submit">Submit</button>
-    <p class="form-note">
+    <p class="note">
       Please do not include medical diagnoses or protected health information (PHI).
     </p>
   </form>
