--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-<!-- HEADER -->
 <header class="header">
   <div class="header-left">
     <img src="assets/cm-favicon.png" class="logo" alt="Care Mobility logo" />
@@ -22,65 +21,58 @@
   <div class="header-right">caremobility247@gmail.com</div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
   <div class="hero-copy">
     <h1>Reliable transportation<br>for recurring medical care</h1>
     <p>
-      Consistent, dependable rides for seniors and patients with
-      ongoing medical appointments.
+      Consistent, dependable rides for seniors and patients with ongoing
+      medical appointments.
     </p>
   </div>
 
   <div class="hero-image">
-    <img
-      src="assets/pleasant-ride-conversation.jpg"
-      alt="Driver providing a calm, friendly ride to a senior"
-    />
+    <img src="assets/pleasant-ride-conversation.jpg" alt="Pleasant ride conversation" />
   </div>
 </section>
 
-<!-- SERVICES -->
 <section class="services">
   <h2>Recurring Medical Transportation, Done Right</h2>
 
   <div class="service-grid">
     <div class="service-card">
-      <strong>Dialysis</strong>
+      <strong>🩺 Dialysis</strong>
       <p>Multiple weekly treatments where timing matters.</p>
     </div>
     <div class="service-card">
-      <strong>Cancer & Infusion Therapy</strong>
+      <strong>💉 Cancer & Infusion Therapy</strong>
       <p>Long-term care at the same treatment centers.</p>
     </div>
     <div class="service-card">
-      <strong>Rehabilitation & Therapy</strong>
+      <strong>♿ Rehabilitation & Therapy</strong>
       <p>Repeat visits week after week.</p>
     </div>
     <div class="service-card">
-      <strong>Radiation Therapy</strong>
+      <strong>☢️ Radiation Therapy</strong>
       <p>Daily treatments where delays disrupt care.</p>
     </div>
     <div class="service-card">
-      <strong>Substance Use Treatment</strong>
+      <strong>🤝 Substance Use Treatment</strong>
       <p>Outpatient programs dependent on routine.</p>
     </div>
     <div class="service-card">
-      <strong>Post-Op Rehab</strong>
+      <strong>🏥 Post-Op Rehab</strong>
       <p>Recovery visits to the same facility.</p>
     </div>
   </div>
 </section>
 
-<!-- IMAGE BREAK -->
 <section class="image-break">
-  <img src="assets/senior-assist.jpg" alt="Helping a senior into a car" />
+  <img src="assets/senior-assist.jpg" alt="Senior assisted into car" />
 </section>
 
-<!-- WHY -->
 <section class="why">
   <div class="why-left">
-    <h2>Why Reliable,<br>Recurring Transportation Matters</h2>
+    <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
     <p>
       Many seniors don’t need transportation once. They need it multiple
       times each week, often on a fixed schedule.
@@ -111,7 +103,6 @@
   </div>
 </section>
 
-<!-- COMPARISON -->
 <section class="compare">
   <h2>How Care Mobility Compares</h2>
 
@@ -159,7 +150,6 @@
   </table>
 </section>
 
-<!-- STORY -->
 <section class="story">
   <img src="assets/daniel.jpg" class="avatar" alt="Founder" />
   <div>
@@ -170,13 +160,13 @@
       over and over again.
     </p>
     <p>
+      Dialysis, therapy, oncology, and rehabilitation require consistency.
       Familiar drivers and predictable routines reduce stress and help
       patients focus on their health.
     </p>
   </div>
 </section>
 
-<!-- FORM -->
 <section class="form">
   <h2>Request Transportation or Learn More</h2>
 
@@ -185,16 +175,14 @@
 
     <input type="text" name="name" placeholder="Your name" required />
     <input type="email" name="email" placeholder="Email address" required />
+    <input type="text" name="phone" placeholder="Phone number" />
     <textarea name="notes" placeholder="Tell us about the transportation needs"></textarea>
 
     <button type="submit">Submit</button>
-    <p class="note">
-      Please do not include medical diagnoses or protected health information (PHI).
-    </p>
+    <p class="note">Please do not include medical diagnoses or protected health information (PHI).</p>
   </form>
 </section>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div>Care Mobility</div>
   <div>caremobility247@gmail.com</div>
