--- a/index.html
+++ b/index.html
@@ -21,22 +21,37 @@
   <div class="header-right">caremobility247@gmail.com</div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
   <div class="hero-copy">
     <h1>Reliable transportation<br>for recurring medical care</h1>
     <p>
-      Consistent, dependable rides for seniors and patients with ongoing
-      medical appointments.
+      <strong>Care Mobility</strong> provides consistent, dependable rides for seniors
+      and patients with ongoing medical appointments — built specifically
+      for routines that repeat week after week.
+    </p>
+    <p class="hero-subcopy">
+      With familiar drivers, predictable pickup times, and a patient-first
+      approach, Care Mobility removes uncertainty from recurring care.
     </p>
   </div>
 
   <div class="hero-image">
-    <img src="assets/pleasant-ride-conversation.jpg" alt="Pleasant ride conversation" />
+    <img
+      src="assets/pleasant-ride-conversation.jpg"
+      alt="Pleasant ride conversation"
+    />
   </div>
 </section>
 
+<!-- SERVICES -->
 <section class="services">
   <h2>Recurring Medical Transportation, Done Right</h2>
+  <p class="section-intro">
+    Care Mobility is designed for patients who need the same ride,
+    to the same place, on the same schedule — without the stress
+    of coordinating transportation every time.
+  </p>
 
   <div class="service-grid">
     <div class="service-card">
@@ -66,10 +81,14 @@
   </div>
 </section>
 
+<!-- IMAGE BREAK -->
 <section class="image-break">
-  <img src="assets/senior-assist.jpg" alt="Senior assisted into car" />
+  <div class="image-frame">
+    <img src="assets/senior-assist.jpg" alt="Senior assisted into car" />
+  </div>
 </section>
 
+<!-- WHY -->
 <section class="why">
   <div class="why-left">
     <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
@@ -103,6 +122,7 @@
   </div>
 </section>
 
+<!-- COMPARISON -->
 <section class="compare">
   <h2>How Care Mobility Compares</h2>
 
@@ -150,23 +170,17 @@
   </table>
 </section>
 
-<section class="story">
-  <img src="assets/daniel.jpg" class="avatar" alt="Founder" />
-  <div>
-    <h2>Built Around Showing Up</h2>
-    <p>
-      Care Mobility was created because many seniors weren’t struggling
-      with a single ride — they were struggling with the same ride,
-      over and over again.
-    </p>
-    <p>
-      Dialysis, therapy, oncology, and rehabilitation require consistency.
-      Familiar drivers and predictable routines reduce stress and help
-      patients focus on their health.
-    </p>
-  </div>
+<!-- QUOTE -->
+<section class="quote">
+  <blockquote>
+    “Care Mobility has been a lifesaver for our family. Having the same
+    driver and a reliable schedule removed so much stress from weekly
+    treatments.”
+    <span>— Family caregiver</span>
+  </blockquote>
 </section>
 
+<!-- FORM -->
 <section class="form">
   <h2>Request Transportation or Learn More</h2>
 
@@ -175,11 +189,12 @@
 
     <input type="text" name="name" placeholder="Your name" required />
     <input type="email" name="email" placeholder="Email address" required />
-    <input type="text" name="phone" placeholder="Phone number" />
     <textarea name="notes" placeholder="Tell us about the transportation needs"></textarea>
 
     <button type="submit">Submit</button>
-    <p class="note">Please do not include medical diagnoses or protected health information (PHI).</p>
+    <p class="note">
+      Please do not include medical diagnoses or protected health information (PHI).
+    </p>
   </form>
 </section>
 
