--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <p>
       <strong>Care Mobility</strong> provides consistent, dependable rides for seniors
       and patients with ongoing medical appointments — built specifically
-      for routines that repeat week after week.
+      for care that repeats week after week.
     </p>
     <p class="hero-subcopy">
-      With familiar drivers, predictable pickup times, and a patient-first
+      With predictable pickup times, familiar drivers, and a patient-first
       approach, Care Mobility removes uncertainty from recurring care.
+    </p>
+    <p class="hero-cta">
+      Transportation you can count on — every appointment, every week.
     </p>
   </div>
 
   <div class="hero-image">
-    <img
-      src="assets/pleasant-ride-conversation.jpg"
-      alt="Pleasant ride conversation"
-    />
+    <img src="assets/pleasant-ride-conversation.jpg" alt="Pleasant ride conversation" />
   </div>
 </section>
 
@@ -93,16 +93,19 @@
   <div class="why-left">
     <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
     <p>
-      Many seniors don’t need transportation once. They need it multiple
-      times each week, often on a fixed schedule.
+      Many seniors don’t need transportation just once. They need it multiple
+      times each week, often on a fixed and unforgiving schedule.
     </p>
     <p>
-      Missed or delayed rides can lead to skipped treatments, increased
-      stress, and unnecessary burden on families and caregivers.
+      When rides are missed or delayed, appointments are skipped, treatments
+      are disrupted, stress increases, and families and caregivers are forced
+      to step in at the last minute.
     </p>
     <p>
-      Care Mobility provides a simple, fixed-price option without insurance
-      delays, approvals, or administrative complexity.
+      <strong>Care Mobility is different.</strong> It’s designed specifically for
+      recurring medical care, with predictable pickup times, familiar drivers,
+      consistent routines, and fixed, transparent pricing — all without
+      insurance, Medicare, or Medicaid paperwork.
     </p>
   </div>
 
@@ -170,13 +173,20 @@
   </table>
 </section>
 
-<!-- QUOTE -->
+<!-- QUOTES -->
 <section class="quote">
   <blockquote>
-    “Care Mobility has been a lifesaver for our family. Having the same
-    driver and a reliable schedule removed so much stress from weekly
-    treatments.”
-    <span>— Family caregiver</span>
+    “Reliable transportation is critical to the care we provide. Care Mobility
+    has been a trusted partner for our clients who need recurring medical
+    appointments. Their consistency, predictable scheduling, and familiar
+    drivers make a real difference for both patients and caregivers.”
+    <span>— Director, Home-Based Care Services</span>
+  </blockquote>
+
+  <blockquote class="secondary-quote">
+    “Care Mobility allows our care teams to focus on the patient — not whether
+    transportation will show up. That reliability is invaluable in home-based care.”
+    <span>— Operations Manager, In-Home Care Provider</span>
   </blockquote>
 </section>
 
@@ -186,11 +196,9 @@
 
   <form name="care-mobility" method="POST" netlify>
     <input type="hidden" name="form-name" value="care-mobility" />
-
     <input type="text" name="name" placeholder="Your name" required />
     <input type="email" name="email" placeholder="Email address" required />
     <textarea name="notes" placeholder="Tell us about the transportation needs"></textarea>
-
     <button type="submit">Submit</button>
     <p class="note">
       Please do not include medical diagnoses or protected health information (PHI).
