--- a/index.html
+++ b/index.html
@@ -56,27 +56,50 @@
   <div class="service-grid">
     <div class="service-card">
       <strong>🩺 Dialysis</strong>
-      <p>Multiple weekly treatments where timing matters.</p>
+      <p>
+        Multiple weekly treatments depend on precise timing. Care Mobility ensures
+        dependable pickups so patients arrive consistently, on schedule, and without stress.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>💉 Cancer & Infusion Therapy</strong>
-      <p>Long-term care at the same treatment centers.</p>
+      <p>
+        Ongoing treatments often take place at the same center over extended periods.
+        Care Mobility provides familiar, reliable transportation that supports continuity of care.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>♿ Rehabilitation & Therapy</strong>
-      <p>Repeat visits week after week.</p>
+      <p>
+        Physical, occupational, and specialty therapies require repeat visits week after week.
+        Care Mobility helps patients stay consistent with their recovery plan.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>☢️ Radiation Therapy</strong>
-      <p>Daily treatments where delays disrupt care.</p>
+      <p>
+        Radiation treatments follow tightly scheduled daily windows.
+        Care Mobility helps prevent missed or delayed appointments that could disrupt care.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>🤝 Substance Use Treatment</strong>
-      <p>Outpatient programs dependent on routine.</p>
+      <p>
+        Outpatient programs rely on structure and routine to be effective.
+        Care Mobility provides consistent transportation that supports accountability and continuity.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>🏥 Post-Op Rehab</strong>
-      <p>Recovery visits to the same facility.</p>
+      <p>
+        Recovery often requires repeat visits to the same facility while mobility is limited.
+        Care Mobility offers predictable rides that support healing and independence.
+      </p>
     </div>
   </div>
 </section>
