--- a/index.html
+++ b/index.html
@@ -111,6 +111,47 @@
   </div>
 </section>
 
+<!-- MODULE 1 -->
+<section class="alt-module">
+  <div class="alt-container">
+    <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
+    <p>
+      Many transportation services rely on Medicare, Medicaid, or insurance approvals —
+      introducing paperwork, eligibility checks, and delays.
+      For patients who need rides multiple times each week, that friction
+      adds stress and uncertainty.
+    </p>
+    <p>
+      <strong>Care Mobility operates differently.</strong> By using sophisticated routing,
+      scheduling, and customer experience technology, we operate efficiently and
+      keep pricing transparent — without relying on insurance networks or care advocates.
+    </p>
+    <p class="emphasis">
+      No approvals. No middle layers. Just reliable, recurring transportation
+      that starts quickly and stays consistent.
+    </p>
+  </div>
+</section>
+
+<!-- MODULE 2 -->
+<section class="alt-module light">
+  <div class="alt-container">
+    <h2>Ambulatory & Wheelchair-Accessible Transportation</h2>
+    <p>
+      Care Mobility supports a range of mobility needs without forcing patients
+      into rigid programs or re-enrollment.
+    </p>
+    <ul class="alt-list">
+      <li><strong>Ambulatory transportation</strong> for patients who can walk with minimal assistance</li>
+      <li><strong>Wheelchair-accessible vans</strong> available when additional support is needed</li>
+    </ul>
+    <p>
+      As needs change, Care Mobility adapts — without new approvals, delays,
+      or administrative hurdles.
+    </p>
+  </div>
+</section>
+
 <!-- WHY -->
 <section class="why">
   <div class="why-left">
@@ -211,6 +252,26 @@
     transportation will show up. That reliability is invaluable in home-based care.”
     <span>— Operations Manager, In-Home Care Provider</span>
   </blockquote>
+</section>
+
+<!-- PRICING -->
+<section class="pricing">
+  <h2>Simple, Transparent Pricing</h2>
+  <div class="pricing-card">
+    <div class="price">
+      <span class="amount">$3.50</span>
+      <span class="unit">per mile</span>
+    </div>
+    <ul>
+      <li>Designed for recurring medical appointments</li>
+      <li>No insurance, Medicare, or Medicaid required</li>
+      <li>Predictable scheduling & familiar routines</li>
+      <li>Ambulatory or wheelchair support</li>
+    </ul>
+    <p class="coverage">
+      <strong>Service Area:</strong> Greater East Bay, California
+    </p>
+  </div>
 </section>
 
 <!-- FORM -->
