--- a/index.html
+++ b/index.html
@@ -111,6 +111,80 @@
   </div>
 </section>
 
+<!-- ========================= -->
+<!-- NEW MODULE: INSURANCE ALTERNATIVE -->
+<!-- ========================= -->
+<section class="alt-module">
+  <div class="alt-container alt-split">
+
+    <div class="alt-text">
+      <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
+
+      <p>
+        Many medical transportation services rely on Medicare, Medicaid, or insurance
+        approvals — introducing paperwork, eligibility checks, and delays.
+        For patients who need rides multiple times each week, that friction
+        adds stress and uncertainty.
+      </p>
+
+      <p>
+        <strong>Care Mobility operates differently.</strong> By using sophisticated
+        routing, scheduling, and customer experience technology, we operate efficiently
+        and keep pricing transparent — without relying on insurance networks,
+        advocates, or authorization workflows.
+      </p>
+
+      <p class="emphasis">
+        No approvals. No middle layers. Just reliable, recurring transportation
+        that starts quickly and stays consistent.
+      </p>
+    </div>
+
+    <div class="alt-images">
+      <img src="assets/senior-driver-assist.jpg" alt="Driver assisting senior into vehicle" />
+      <img src="assets/senior-arrival-medical.jpg" alt="Senior arriving calmly at medical appointment" />
+    </div>
+
+  </div>
+</section>
+<!-- ========================= -->
+<!-- NEW MODULE: VEHICLE TYPES -->
+<!-- ========================= -->
+<section class="alt-module light">
+  <div class="alt-container alt-split reverse">
+
+    <div class="alt-text">
+      <h2>Ambulatory & Wheelchair-Accessible Transportation</h2>
+
+      <ul class="alt-bullets">
+        <li>
+          <strong>Ambulatory transportation</strong><br />
+          For patients who can walk independently or with minimal assistance,
+          but need reliable, recurring rides to medical appointments.
+        </li>
+
+        <li>
+          <strong>Wheelchair-accessible vans</strong><br />
+          Available when additional mobility support is required, including
+          secure wheelchair transport and assisted entry and exit.
+        </li>
+
+        <li>
+          <strong>Flexible as needs change</strong><br />
+          As mobility needs evolve, Care Mobility adapts without re-enrollment,
+          new approvals, or administrative delays.
+        </li>
+      </ul>
+    </div>
+
+    <div class="alt-images">
+      <img src="assets/ambulatory-transport-van.jpg" alt="Ambulatory medical transportation van" />
+      <img src="assets/wheelchair-transport-van.jpg" alt="Wheelchair accessible medical van" />
+    </div>
+
+  </div>
+</section>
+
 <!-- WHY -->
 <section class="why">
   <div class="why-left">
