--- a/index.html
+++ b/index.html
@@ -120,25 +120,40 @@
     <div class="alt-text">
       <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
 
-      <p>
-        Many medical transportation services rely on Medicare, Medicaid, or insurance
-        approvals — introducing paperwork, eligibility checks, and delays.
-        For patients who need rides multiple times each week, that friction
-        adds stress and uncertainty.
-      </p>
+      <ul class="alt-bullets">
+        <li>
+          <strong>Insurance-based transportation adds friction</strong><br />
+          Many services depend on <strong>Medicare, Medicaid, or insurance approvals</strong>,
+          requiring paperwork, eligibility checks, and authorization workflows
+          before rides can even be scheduled.
+        </li>
 
-      <p>
-        <strong>Care Mobility operates differently.</strong> By using sophisticated
-        routing, scheduling, and customer experience technology, we operate efficiently
-        and keep pricing transparent — without relying on insurance networks,
-        advocates, or authorization workflows.
-      </p>
+        <li>
+          <strong>Delays hurt patients with recurring care</strong><br />
+          For patients who need rides multiple times each week, insurance,
+          Medicare, and Medicaid processes often introduce delays, missed
+          appointments, and unnecessary stress.
+        </li>
 
-      <p class="emphasis">
-        No approvals. No middle layers. Just reliable, recurring transportation
-        that starts quickly and stays consistent.
-      </p>
-    </div>
+        <li>
+          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance</strong><br />
+          We operate independently of insurance networks, care advocates,
+          and authorization requirements.
+        </li>
+
+          <li>
+            <strong>Technology-driven efficiency keeps pricing transparent</strong><br />
+            By using sophisticated routing, scheduling, and customer experience
+            technology, Care Mobility operates efficiently and offers clear,
+            predictable pricing without insurance complexity.
+          </li>
+
+          <li>
+            <strong>No approvals. No middle layers.</strong><br />
+            Just reliable, recurring transportation that starts quickly and
+            stays consistent — week after week.
+          </li>
+      </ul>
 
     <div class="alt-images">
       <img src="assets/senior-driver-assist.jpg" alt="Driver assisting senior into vehicle" />
@@ -283,7 +298,7 @@
   <blockquote class="secondary-quote">
     “Care Mobility allows our care teams to focus on the patient — not whether
     transportation will show up. That reliability is invaluable in home-based care.”
-    <span>— Operations Manager, In-Home Care Provider</span>
+    <span>— Operations Manager, Major Dialysis Center</span>
   </blockquote>
 </section>
 
